# mlops_hse_1

./: Dockerfile  Dockerfile.app  Dockerfile.minio  Dockerfile.mlflow  README.md  Untitled-1.ipynb  app.py  data_models.py  docker-compose.yml  dvc_hist.txt  endpoints.py  gradio_app.py  main.py  model_service.proto  model_service_pb2.py  model_service_pb2_grpc.py  pyproject.toml  s3_client.py  server.py  test.py  test_grpc_server.py  train_model.py
.dvc/: config
configs/: config.yml
mlruns/0/: meta.yaml
mlruns/994865045380825441/: meta.yaml
mlruns/994865045380825441/221ada7db3a44ff98735a8812b26fff8/: meta.yaml
mlruns/994865045380825441/221ada7db3a44ff98735a8812b26fff8/artifacts/model/: MLmodel  conda.yaml  model.pkl  python_env.yaml
mlruns/994865045380825441/221ada7db3a44ff98735a8812b26fff8/metrics/: accuracy
mlruns/994865045380825441/221ada7db3a44ff98735a8812b26fff8/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
models/: SVC.joblib  my_model_RF.joblib  my_model_SVC.joblib
temp_buffer/: test_model.joblib
tests/: .gitignore  RF_params.json  test.csv  test_inference.csv  test_inference.csv.dvc
