[tool.poetry]
name = "mlops-hw-1"
version = "0.1.0"
description = "Первое ДЗ по MLOps"
authors = ["data1ayazist, pollucky, alexsivkovu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.11.4"
fastapi = "0.115.4"
boto3 = "^1.35.86"
python-multipart = "^0.0.20"
gradio = "^5.9.1"
joblib = "^1.4.2"
scikit-learn = "^1.6.0"
uvicorn = "^0.34.0"
grpcio = "^1.68.1"
grpcio-tools = "^1.68.1"
resource = "^0.2.1"
mlflow = "^2.19.0"
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
